--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://ShmuelHor.github.io/memory-game",
   "scripts": {
-    "homepage": "https://ShmuelHor.github.io/memory-game",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist", 
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
